--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dashboard</title>
     <link rel="stylesheet" href="./resources/css/style.css" />
     <link rel="shortcut icon" href="./resources/icons/logo.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
@@ -184,7 +184,7 @@
                     </svg>
                     Dashboard
                 </a> </li>
-            <li><a href="index.html">
+            <li><a href="compititions.html">
                     <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0)">
                             <path
@@ -883,7 +883,7 @@
                     </svg>
                     Dashboard
                 </a> </li>
-            <li><a href="index.html">
+            <li><a href="compititions.html">
                     <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g clip-path="url(#clip0)">
                             <path
@@ -953,7 +953,7 @@
         </div>
         <br><br>
 
-        <div class="bottom" style="display: none">
+        <div class="bottom" >
             <div class="withLogo">
                 <img src="./resources/icons/logo.png" alt="">
                 <h3>1B $POFY = $0.1102</h3>
@@ -993,7 +993,7 @@
             </div>
         </div>
 
-        <div class="bottom">
+        <div class="bottom" style="display: none">
             <div class="withLogo">
                 <img src="./resources/icons/logo.png" alt="">
                 <p>1B $POFY = $0.1102</p>
