some css correction

--- a/compititions.html
+++ b/compititions.html
@@ -1218,7 +1218,7 @@
                 </div>
             </div>
 
-            <div><br><br><br><br><br></div>
+            <div><br><br></div>
 
             <footer>
                 <p class="copyRight">&copy; 2021 POFY - Fantasy Trading | All rights reserved. </p>
