3rd page done without content changing

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                     </svg>
                     Competitions
                 </a></li>
-            <li><a href="index.html">
+            <li><a href="Cryptocurrency.html">
                     <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M10.0669 9.26709L8.06738 9.26751V11.7781H10.0668C10.759 11.7781 11.3221 11.2149 11.3221 10.5226C11.3222 10.1892 11.1911 9.87441 10.953 9.6363C10.7149 9.39819 10.4002 9.26705 10.0669 9.26709Z" />
@@ -856,7 +856,7 @@
                     </svg>
                     Competitions
                 </a></li>
-            <li><a href="index.html">
+            <li><a href="Cryptocurrency.html">
                     <svg viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M10.0669 9.26709L8.06738 9.26751V11.7781H10.0668C10.759 11.7781 11.3221 11.2149 11.3221 10.5226C11.3222 10.1892 11.1911 9.87441 10.953 9.6363C10.7149 9.39819 10.4002 9.26705 10.0669 9.26709Z" />
