some correction for 3rd page

--- a/Cryptocurrency.html
+++ b/Cryptocurrency.html
@@ -356,7 +356,8 @@
                     </div>
                     <div class="tr">
                         <div class="td one">
-                            <img class="symbol" src="./resources/icons/cryptocurrencyPage/DOT.png" alt="">
+                            <img class="symbol dotImageLight" src="./resources/icons/cryptocurrencyPage/DOT.png" alt="">
+                            <img class="symbol dotImageDark" src="./resources/icons/cryptocurrencyPage/DOT_PINK.png" alt="">
                             DOT
                         </div>
                         <div class="td two">Dotcoin</div>
