dot menu correction for mobile

--- a/Cryptocurrency.html
+++ b/Cryptocurrency.html
@@ -599,7 +599,8 @@
                     </div>
                     <div class="single">
                         <div class=" head">
-                            <img src="./resources/icons/cryptocurrencyPage/DOT.png" alt="">
+                            <img class="dotImageLight" src="./resources/icons/cryptocurrencyPage/DOT.png" alt="">
+                            <img class="dotImageDark" src="./resources/icons/cryptocurrencyPage/DOT_PINK.png" alt="">
                             DOT
                         </div>
                         <div class="row">
