spelling mistake correction

--- a/Cryptocurrency.html
+++ b/Cryptocurrency.html
@@ -19,7 +19,7 @@
                 <img class="mobileLightLogo" src="./resources/icons/sidebar_icons/sidebarlogo2.png" alt="">
                 <img class="mobileDarkLogo" src="./resources/icons/sidebar_icons/darkModeLogo.png" alt="">
             </a>
-            <h2>Cryptocurrency</h2>
+            <h2>Cryptocurrencies</h2>
 
 
         </div>
@@ -63,7 +63,7 @@
         </div>
         <div class="right">
             <div class="Left">
-                <h2>Cryptocurrency</h2>
+                <h2>Cryptocurrencies</h2>
                 <form>
                     <div class="searchArea">
                         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
