--- a/compititions.html
+++ b/compititions.html
@@ -18,7 +18,7 @@
                 <img class="mobileLightLogo" src="./resources/icons/sidebar_icons/sidebarlogo2.png" alt="">
                 <img class="mobileDarkLogo" src="./resources/icons/sidebar_icons/darkModeLogo.png" alt="">
             </a>
-            <h2>Compititions</h2>
+            <h2>Competitions</h2>
         </div>
         <div class="right">
             
@@ -50,7 +50,7 @@
         </div>
         <div class="right">
             <div class="Left">
-                <h2>Competition</h2>
+                <h2>Competitions</h2>
                 <!-- <form>
                     <div class="searchArea">
                         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
